tests/source1/fail/runtime_typecheck5.js
"str" - "s"; 
//error: "boo type mismatch"